# revenue-predication

./: README.md  SETUP_GUIDE.md  check_setup.py  check_setup.sh  create_zip.py  create_zip.sh  main.py  pyproject.toml
data/: vcc_edge_for_prediction.xlsx
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
model/: revenue_prediction_model.pkl
notebook/: final_xgboost.ipynb  predict.py
